--- a/ProyectoServlet/src/main/webapp/index.html
+++ b/ProyectoServlet/src/main/webapp/index.html
@@ -66,6 +66,7 @@
           </li>
           <li><a href="services.html">Services</a></li>
            <li><a href="login.html">Login</a></li>
+           <li><a href="registro.html">Sign Up</a></li>
           
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="pricing.html">Pricing</a></li>
